--- a/App/View/channel/channel.ad.html
+++ b/App/View/channel/channel.ad.html
@@ -25,9 +25,9 @@
     广告图片建议尺寸为 ( xxx ) x ( xxx )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件
     </div>
     <label>图片链接：</label>
-    <input type="input" class="form-control" maxlength="150" name="link" value="<?=$info['link']?>">
+    <input type="input" class="form-control" id="links"  maxlength="150" name="link" value="<?=$info['link']?>">
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
-    请输入该广告链接，未输入链接则该图片不可点击。
+    必填项!
     </div>
     <label>ALT描述:</label> <input type="text" name="alt" value="<?=$info['alt']?>"><br/>
     <label>描述：</label>
@@ -66,6 +66,13 @@
 
         $("#myButton").on('click', function (){
             var _this = $(this);
+            var link = $("#links").val();
+            if($.trim(link)===""){
+                layer.msg('请填写图片链接！', {
+                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
+                        });
+                return;
+            }
             var data = $("#setAd").serialize();
             _this.attr('disabled', true)
             $.ajax({
