添加打包功能
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@12520 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/channel/channel.index.html
+++ b/App/View/channel/channel.index.html
@@ -183,7 +183,7 @@
     <br/>
     <div class="wrap-top">
         <h4>天天低价设置</h4>
-        <font style="color: #666666">(为保证页面效果，请保持商品条数为4的倍数)</font>
+        <font style="color: #666666">(为保证页面效果，请保持商品条数为4的倍数,销售价格类型为定价)</font>
         
 <!--        <select name="isTop" class="input selectChange">
             <option <?if($info['isTop']==1){echo 'selected';}?> value="1">启用</option>
