--- a/App/View/basic/basic.banner.html
+++ b/App/View/basic/basic.banner.html
@@ -21,7 +21,7 @@
     </div> 
     
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
-    广告图片建议尺寸为 ( xxx ) x ( xxx )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件
+    广告图片建议尺寸为 ( 1920 ) x ( 400 )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件
     </div>
     <label>图片链接：</label>
     <input type="input" class="form-control" name="link" value="<?=$info['link']?>">
