--- a/App/View/channel/channel.ad.html
+++ b/App/View/channel/channel.ad.html
@@ -32,7 +32,8 @@
     <label>ALT描述:</label> <input type="text" name="alt" value="<?=$info['alt']?>"><br/>
     <label>描述：</label>
     <textarea class="form-control" name="desc" maxlength="150" style="width:99%;height:80px;"><?=$info['desc']?></textarea>
-
+    <label> </label>
+    <br/>
     <div style="bottom:15px;position: fixed;">
         <button type="button" id="myButton" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;确定&nbsp;&nbsp;&nbsp;&nbsp;</button>
         <button type="button" onclick="closeAll();" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;取消&nbsp;&nbsp;&nbsp;&nbsp;</button>
