--- a/App/View/channel/channel.index.html
+++ b/App/View/channel/channel.index.html
@@ -59,7 +59,7 @@
 <? if( !empty($info) ) { ?>
 <input type="hidden" id="cid" value="<?=$info['id']?>">
 <div class="wrap">
-    <div class="wrap-top">
+<!--    <div class="wrap-top">
         <h4>Banner设置
         </h4>
         <select name="isBanner" class="input selectChange">
@@ -77,7 +77,7 @@
         <button class="btn btn-danger" id="add-banner" type="button">上传背景图</button>
     </div>
 
-    <br />
+    <br />-->
     <div class="wrap-top">
         <h4>广告图设置
         </h4>
