新增商标搜索可以多个商标可以以空格分隔
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@12626 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -33,7 +33,7 @@
             </dd>
             <dd>
                 <label>商标名称：</label><input type="text" name="tmName" value="<?=$s['tmName']?>" class="input input-sm"/> 
-                <label class="mj-mle">商标号：</label><input type="text" name="tmNumber" value="<?=$s['tmNumber']?>" class="input input-sm"/>
+                <label class="mj-mle">商标号：</label><input type="text" name="tmNumber" placeholder="多个商标号以空格分开" value="<?=$s['tmNumber']?>" class="input input-sm"/>
                 <label class="mj-mle">群组：</label><input type="text" name="tmGroup" value="<?=$s['tmGroup']?>" id="groupes" class="input input-sm"/>
                 <label class="mj-mle">销售状态：</label>
                 <select name="saleStatus" class="input input-sm">
