--- a/App/View/package/package.index.html
+++ b/App/View/package/package.index.html
@@ -60,7 +60,7 @@
         </div>
         <br>
         <div class="btn-group">
-                <a href="/package/add" class="btn btn-danger add-case">添加打包商品</a>
+                <a href="/package/add" class="btn btn-danger add-case">添加打包</a>
         </div>
         <div id="page" align="center"><?=$pageBar?></div>
     </div>
