--- a/App/View/channel/channel.ad.html
+++ b/App/View/channel/channel.ad.html
@@ -22,7 +22,13 @@
     </div> 
     
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
-    广告图片建议尺寸为 ( 1920 ) x ( 312 )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件
+    <?if($cId==1){
+        echo "广告图片建议尺寸为 ( 181 ) x ( 不限制 )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件";
+    }else{
+        echo "广告图片建议尺寸为 ( 1920 ) x ( 312 )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件";
+    }?>    
+    
+    
     </div>
     <label>图片链接：</label>
     <input type="input" class="form-control" id="links"  maxlength="150" name="link" value="<?=$info['link']?>">
