--- a/App/View/module/module.index.html
+++ b/App/View/module/module.index.html
@@ -31,6 +31,7 @@
                 <thead>
                     <tr class="active">
                         <th>模块名称</th>
+                        <th>类型</th>
                         <th>子分类</th>
                         <th>包含广告条数</th>
                         <th>推广链接条数</th>
@@ -42,6 +43,7 @@
                 <? foreach ($list as $k => $v) {  ?>
                 <tr>
                     <td><?=$v['name']?></td>
+                    <td><?=$module_type[$v['type']]?></td>
 					<td><?=$v['classNum']?></td>
 					<td><?=$v['adsNum']?></td>
 					<td><?=$v['linkNum']?></td>
