首页楼层图片添加提示
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@12707 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -274,7 +274,7 @@
                     <input type="hidden" name="tjpic" class="tjpic" value="<?=$sale['tminfo']['indexPic']?>" />
                     <div class="bzform">
                         <label>美化图片：</label><img src="<?=$sale['tminfo']['embellish']?>" class="bzpic" style="width:30px;height:30px;">
-                        <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
+                        <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>(若为首页商标楼层图片,建议为152x104)
                     </div> &nbsp;&nbsp;&nbsp;&nbsp;<br/>
                     <div class="">
                         <label>ALT描述1：</label>
