git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@12708 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -248,8 +248,8 @@
                     <input type="hidden" name="bzpic" class="bzpic" value="<?=$patent['tminfo']['embellish']?>" />
                     <input type="hidden" name="tjpic" class="tjpic" value="<?=$patent['tminfo']['indexPic']?>" />
                     <div class="bzform">
-                        <label>美化图片：</label><img src="<?=$patent['tminfo']['embellish']?>" class="bzpic" style="width:30px;height:30px;">(若为首页专利楼层图片,建议为219x162)
-                        <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
+                        <label>美化图片：</label><img src="<?=$patent['tminfo']['embellish']?>" class="bzpic" style="width:30px;height:30px;">
+                        <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>(若为首页专利楼层图片,建议为219x162)
                     </div> &nbsp;&nbsp;&nbsp;&nbsp;<br/>
                     <div class="">
                         <label>ALT描述：</label>
